src/objects/TransferEvaluation__c.object
<CustomObject>
    <description>A Transfer evaluation is the parent object of the equivalent courses that will given to the student from their transfer work. It controls the overall status and assignment of the evaluation.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this is the current active evaluation</description>
        <inlineHelpText>Whether or not this is the current active evaluation</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transfer_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAREStatus__c</fullName>
        <formula>TEXT( Opportunity__r.CareStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <formula>Opportunity__r.CollegeInterest__c</formula>
        <label>College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibilityStatus__c</fullName>
        <description>The status of the student&apos;s eligibility based on the transfer evaluation</description>
        <inlineHelpText>The status of the student&apos;s eligibility based on the transfer evaluation</inlineHelpText>
        <label>Eligibility Status</label>
        <picklist>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EvaluationSentDate__c</fullName>
        <label>Evaluation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvaluationStatus__c</fullName>
        <label>Evaluation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Evaluation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EvaluationType__c</fullName>
        <label>Evaluation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Transfer Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EvaluatorComments__c</fullName>
        <description>Comments made by the evaluator for the overall evaluation.</description>
        <inlineHelpText>This comment section you can note things that the student may call and ask about if they didn&apos;t have.</inlineHelpText>
        <label>Evaluator Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvaluatorInitials__c</fullName>
        <formula>LEFT( AssignedTo__r.FirstName, 1)  + LEFT( AssignedTo__r.LastName, 2)</formula>
        <label>Evaluator Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluator__c</fullName>
        <label>Evaluator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedStartDate__c</fullName>
        <formula>IF(Opportunity__r.CloseDate - Today() &gt;= 1095, &quot;Unknown Start Date&quot;, TEXT(Opportunity__r.CloseDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpediteComments__c</fullName>
        <label>Expedite Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExpeditePriority__c</fullName>
        <description>Formula to determine the priority level</description>
        <formula>IF( OR(TEXT(EvaluationStatus__c) = &quot;Sent&quot;, TEXT(EvaluationStatus__c) = &quot;Not Eligible&quot;), &quot;S&quot;,

IF(Opportunity__r.MilitaryScholarshipPriority__c = true, &quot;EM/S&quot;,

IF(Opportunity__r.LateAdd__c = true, &quot;Late Add&quot;,

IF(Opportunity__r.ExpediteTranscriptEvaluation__c = True, &quot;EC&quot;,

IF (OR(TEXT(ExpediteReason__c)  = &quot;Late Add&quot;, 
            TEXT(ExpediteReason__c)  = &quot;Military&quot;, 
            TEXT(ExpediteReason__c)  = &quot;Scholarship&quot;, 
            TEXT(ExpediteReason__c)  = &quot;Service Failure&quot;, 
            NOW() - Opportunity__r.TranscriptDate__c &gt;= 30), &quot;A&quot;,

IF(OR(TEXT(ExpediteReason__c) = &quot;Degree Plan&quot;,
            TEXT(ExpediteReason__c)  = &quot;Student Request&quot;, 
             NOW() - Opportunity__r.TranscriptDate__c &gt;= 15), &quot;B&quot;,

IF(TEXT(ExpediteReason__c)  = &quot;EWB&quot;, &quot;EWB&quot;,

IF(NOW() - Opportunity__r.TranscriptDate__c &gt;= 7, &quot;C&quot;, 

&quot;N&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpediteReason__c</fullName>
        <description>Reason for needing to Expedite the Transfer Evaluation</description>
        <label>Expedite Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Degree Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>IF(  AssignedTo__r.ManagerId =  $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The Link Between opportunities and transfer evaluations</description>
        <label>CARE Profile Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transfer Evaluations</relationshipLabel>
        <relationshipName>TransferEvaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QualityAssurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Assurance</label>
        <referenceTo>QualityAssurance__c</referenceTo>
        <relationshipLabel>Transfer Evaluations</relationshipLabel>
        <relationshipName>TransferEvaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolutionTime__c</fullName>
        <label>Resolution Time</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDriveURL__c</fullName>
        <formula>LEFT(Opportunity__r.Account.LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDriveURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentEmail__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <formula>Opportunity__r.Account.StudentContact__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMaidenName__c</fullName>
        <formula>Opportunity__r.StudentAttributes__r.MaidenName__c</formula>
        <label>Student Maiden Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <formula>Opportunity__r.Account.StudentContact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnAround__c</fullName>
        <formula>IF( NOT(ISBLANK(EvaluationSentDate__c  )), EvaluationSentDate__c  -  (
IF(OR(LastModifiedDate &lt;= Opportunity__r.ReadyforEvaluationDate__c, LastModifiedDate &lt;=Opportunity__r.ReadyforEvaluationDate__c, ISBLANK(Opportunity__r.ReadyforEvaluationDate__c)), CreatedDate, Opportunity__r.ReadyforEvaluationDate__c)),


LastModifiedDate -(IF(OR(LastModifiedDate &lt;= Opportunity__r.ReadyforEvaluationDate__c, LastModifiedDate &lt;=Opportunity__r.ReadyforEvaluationDate__c, ISBLANK(Opportunity__r.ReadyforEvaluationDate__c)), CreatedDate, Opportunity__r.ReadyforEvaluationDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turn Around</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Views__c</fullName>
        <formula>IF($User.Id =  AssignedTo__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The program that the student was eThe program that the student was evaluated for valuated for</description>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Transfer Evaluations</relationshipLabel>
        <relationshipName>TransferEvaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transfer Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>ExpediteReason__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>StudentID__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SRMSupport</group>
            <role>TranscriptTeamManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusinessCollegeEvals</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) or (1 AND 2 AND 3 AND 5)</booleanFilter>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Active__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>contains</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Canceled,Sent</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Evaluation,In Process,Pending</value>
        </filters>
        <label>View for Business College Evals</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusinessCollegeEvals_EWB</fullName>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>CAREStatus__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Active__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>contains</operation>
            <value>INTV,CLRD</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Canceled,Sent</value>
        </filters>
        <label>View for Business College Evals EWB</label>
        <sharedTo>
            <group>SRMSupport</group>
            <role>EnrollmentManager</role>
            <role>TranscriptTeamManager</role>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HealthProfessionsEWB</fullName>
        <columns>ExpeditePriority__c</columns>
        <columns>Opportunity__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Health Professions</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>contains</operation>
            <value>CLRD,INTV</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <label>View for Health Professions Evals EWB</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HealthProfessionsEvals</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (1 AND 2 AND 3 AND 5)</booleanFilter>
        <columns>ExpeditePriority__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>contains</operation>
            <value>Health,Nursing</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Evaluation,In Process,Pending</value>
        </filters>
        <label>View for Health Professions Evals</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITCollegeEvals</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) AND (1 AND 2 AND 3 and 5)</booleanFilter>
        <columns>ExpediteReason__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Active__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>contains</operation>
            <value>information,IT</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Evaluation,In Process,Pending</value>
        </filters>
        <label>View for IT College Evals</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITCollegeEvals_EWB</fullName>
        <columns>ExpediteReason__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Active__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>contains</operation>
            <value>information</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>contains</operation>
            <value>CLRD,INTV</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <label>View for IT College Evals EWB</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAppealedEvaluations</fullName>
        <columns>ExpeditePriority__c</columns>
        <columns>ExpediteReason__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Opportunity__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Sent,Canceled,Not Eligible,Complete</value>
        </filters>
        <filters>
            <field>Views__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Appealed</value>
        </filters>
        <label>My Appealed Evaluations</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyEvaluations</fullName>
        <columns>EvaluationStatus__c</columns>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>EligibilityStatus__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Views__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Evaluations</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyPendingEvaluations</fullName>
        <columns>ExpeditePriority__c</columns>
        <columns>ExpediteReason__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Opportunity__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Sent,Canceled,Not Eligible,Complete</value>
        </filters>
        <filters>
            <field>Views__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Appealed</value>
        </filters>
        <label>My Pending Evaluations</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NAMT_Students</fullName>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>Opportunity__c</columns>
        <columns>EvaluationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAREStatus__c</field>
            <operation>contains</operation>
            <value>NAMT</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <label>NAMT Students</label>
        <sharedTo>
            <role>IT_Group</role>
            <role>TranscriptTeamManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NOCollegeEvals</fullName>
        <booleanFilter>( 1 AND 2 AND 3 and 5) AND (1 AND 2 and 4 and 5)</booleanFilter>
        <columns>Opportunity__c</columns>
        <columns>ExpediteReason__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>Active__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notEqual</operation>
            <value>NAMT - Not Admitted</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Evaluation,In Process,Pending</value>
        </filters>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
        </filters>
        <label>View for No College of Interest Evals</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QC_Evaluations</fullName>
        <columns>ExpediteReason__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>Opportunity__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>View Evaluations in QC</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TeachersCollegeEvals</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) or (1 AND 2 AND 3 AND 5)</booleanFilter>
        <columns>ExpediteReason__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>Opportunity__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>contains</operation>
            <value>Teachers</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Evaluation,In Process,Pending</value>
        </filters>
        <label>View for Teachers College Evals</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TeachersCollegeEvals_EWB</fullName>
        <columns>ExpediteReason__c</columns>
        <columns>EvaluationStatus__c</columns>
        <columns>NAME</columns>
        <columns>AssignedTo__c</columns>
        <columns>StudentID__c</columns>
        <columns>ExpectedStartDate__c</columns>
        <columns>Opportunity__c</columns>
        <columns>WGUDegreeProgram__c</columns>
        <columns>StudentMaidenName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Teachers College</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>contains</operation>
            <value>INTV,CLRD</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>notContain</operation>
            <value>NAMT - Not Admitted,DROP</value>
        </filters>
        <filters>
            <field>EvaluationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Eligible,Sent,Canceled</value>
        </filters>
        <label>View for Teachers College Evals EWB</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Transfer Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ContentOrDegreeVerification</fullName>
        <active>true</active>
        <description>Validate all fields are correctly populated when saving a content or degree verification</description>
        <errorConditionFormula>IF( AND(OR(TEXT(EvaluationStatus__c) = &quot;Complete&quot;, TEXT(EvaluationStatus__c) = &quot;Sent&quot;),TEXT(EvaluationType__c ) &lt;&gt; &quot;Transfer Evaluation&quot;,  TEXT(EligibilityStatus__c)=NULL), true, false)</errorConditionFormula>
        <errorMessage>Please define the eligibility status to save this record as completed or sent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SaveCompleted</fullName>
        <active>true</active>
        <description>Restriction when saving evaluations as completed</description>
        <errorConditionFormula>IF(AND(OR(TEXT(EvaluationStatus__c) = &quot;Complete&quot;, TEXT(EvaluationStatus__c) = &quot;Sent&quot;), ISBLANK( AssignedTo__c )), true, false)</errorConditionFormula>
        <errorMessage>Please assign the evaluation before saving the record as completed or sent.</errorMessage>
    </validationRules>
</CustomObject>